--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-    background-color: rgb(53, 15, 15);
+    background-color: rgb(20, 44, 40);
     color: rgb(253, 203, 212);
 }
 
@@ -15,12 +15,12 @@ align-items: center;
 .grid {
     display: grid;
     grid-template-columns: repeat(3,50px);
-grid-template-rows: 40px repeat(3,50px) 60px ;
+grid-template-rows: 30px repeat(3,50px) 60px ;
 gap: 5px;
 }
 
 .xoro{
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(10, 95, 101);
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -29,7 +29,7 @@ gap: 5px;
 .xoro:hover{
     cursor: pointer;
     opacity: 80%;
-    background-color: rgb(255, 0, 0);
+   
 
 }
 
@@ -62,7 +62,7 @@ transform: translateX(20px);
 
 }
 .topleft{
-  background-color:   rgb(53, 15, 15);
+  background-color:   rgb(53, 15, 15) transparent;
 grid-column-start : 1;
 grid-column-end : 3;
 display: flex;
@@ -75,16 +75,18 @@ padding: 20px;
     background:transparent;
     display: flex;
 align-items: baseline;
-justify-content: center;
+justify-content: left;
 align-self: center;
 width: 100%;
-margin: 3px;
+margin: 3px;white-space: nowrap;
+margin-left: -10px;
     font-size:20px;
     animation:  1s ease-in-out xgetbegger ;
 }
 .topleft p{
-    font-size:10px;
+    font-size:8px;
     animation:  1s ease-in-out turnmove;
+    white-space: nowrap;
 }
 
 .bottom{
@@ -92,8 +94,9 @@ margin: 3px;
 }
 
 .actions button{
+    margin-top: 8px;
     font-size: 11px;
-    background-color: rgb(203, 150, 150);
+    background-color: rgb(59, 117, 184);
     width: 100%;
     height:20px;
     border-radius: 3px;
